--- a/public/css/Main.css
+++ b/public/css/Main.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
 
 :root {
     --background: rgba(255, 30, 170, .85);
@@ -191,6 +190,29 @@ nav a:hover {
     nav a:hover::before {
         transform: scale(1,1);
     }
+.to-top {
+    background: white;
+    position: fixed;
+    bottom: 16px;
+    right: 32px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    color: black;
+    text-decoration: none;
+    opacity: 0;
+    pointer-events: none;
+    transition: all .4s;
+}
+.to-top.active{
+    bottom:32px;
+    pointer-events: none;
+    opacity: 1;
+}
 
 }
 
